--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -1147,56 +1147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model create_model_6\n",
+      "Model create_model_1\n",
       "Epoch 1/20\n",
-      "2874/2874 [==============================] - 86s 23ms/step - loss: 0.9802 - accuracy: 0.8946 - precision_2: 0.9095 - recall_2: 0.8800 - val_loss: 0.4928 - val_accuracy: 0.9199 - val_precision_2: 0.9290 - val_recall_2: 0.9116\n",
-      "Epoch 2/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.4594 - accuracy: 0.9273 - precision_2: 0.9355 - recall_2: 0.9204 - val_loss: 0.3875 - val_accuracy: 0.9488 - val_precision_2: 0.9552 - val_recall_2: 0.9419\n",
-      "Epoch 3/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.3736 - accuracy: 0.9426 - precision_2: 0.9499 - recall_2: 0.9371 - val_loss: 0.4138 - val_accuracy: 0.9127 - val_precision_2: 0.9243 - val_recall_2: 0.9045\n",
-      "Epoch 4/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.3038 - accuracy: 0.9499 - precision_2: 0.9565 - recall_2: 0.9449 - val_loss: 0.2653 - val_accuracy: 0.9578 - val_precision_2: 0.9658 - val_recall_2: 0.9527\n",
-      "Epoch 5/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.2776 - accuracy: 0.9526 - precision_2: 0.9594 - recall_2: 0.9479 - val_loss: 0.2483 - val_accuracy: 0.9640 - val_precision_2: 0.9706 - val_recall_2: 0.9594\n",
-      "Epoch 6/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.2594 - accuracy: 0.9556 - precision_2: 0.9620 - recall_2: 0.9512 - val_loss: 0.2302 - val_accuracy: 0.9629 - val_precision_2: 0.9701 - val_recall_2: 0.9578\n",
-      "Epoch 7/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.2459 - accuracy: 0.9581 - precision_2: 0.9641 - recall_2: 0.9536 - val_loss: 0.2293 - val_accuracy: 0.9648 - val_precision_2: 0.9698 - val_recall_2: 0.9591\n",
-      "Epoch 8/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.2384 - accuracy: 0.9598 - precision_2: 0.9657 - recall_2: 0.9555 - val_loss: 0.2448 - val_accuracy: 0.9656 - val_precision_2: 0.9709 - val_recall_2: 0.9630\n",
-      "Epoch 9/20\n",
-      "2874/2874 [==============================] - 37s 13ms/step - loss: 0.2286 - accuracy: 0.9621 - precision_2: 0.9672 - recall_2: 0.9582 - val_loss: 0.2063 - val_accuracy: 0.9675 - val_precision_2: 0.9725 - val_recall_2: 0.9630\n",
-      "Epoch 10/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.2239 - accuracy: 0.9624 - precision_2: 0.9673 - recall_2: 0.9585 - val_loss: 0.2117 - val_accuracy: 0.9656 - val_precision_2: 0.9712 - val_recall_2: 0.9601\n",
-      "Epoch 11/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.2191 - accuracy: 0.9628 - precision_2: 0.9678 - recall_2: 0.9589 - val_loss: 0.2166 - val_accuracy: 0.9668 - val_precision_2: 0.9711 - val_recall_2: 0.9641\n",
-      "Epoch 12/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.2119 - accuracy: 0.9644 - precision_2: 0.9688 - recall_2: 0.9608 - val_loss: 0.1770 - val_accuracy: 0.9754 - val_precision_2: 0.9785 - val_recall_2: 0.9724\n",
-      "Epoch 13/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.2093 - accuracy: 0.9645 - precision_2: 0.9692 - recall_2: 0.9611 - val_loss: 0.1683 - val_accuracy: 0.9784 - val_precision_2: 0.9824 - val_recall_2: 0.9756\n",
-      "Epoch 14/20\n",
-      "2874/2874 [==============================] - 37s 13ms/step - loss: 0.2053 - accuracy: 0.9655 - precision_2: 0.9698 - recall_2: 0.9621 - val_loss: 0.1748 - val_accuracy: 0.9776 - val_precision_2: 0.9817 - val_recall_2: 0.9747\n",
-      "Epoch 15/20\n",
-      "2874/2874 [==============================] - 40s 14ms/step - loss: 0.2033 - accuracy: 0.9657 - precision_2: 0.9700 - recall_2: 0.9624 - val_loss: 0.2530 - val_accuracy: 0.9473 - val_precision_2: 0.9512 - val_recall_2: 0.9435\n",
-      "Epoch 16/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.2026 - accuracy: 0.9658 - precision_2: 0.9703 - recall_2: 0.9624 - val_loss: 0.7101 - val_accuracy: 0.8378 - val_precision_2: 0.8435 - val_recall_2: 0.8309\n",
-      "Epoch 17/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.2067 - accuracy: 0.9643 - precision_2: 0.9692 - recall_2: 0.9607 - val_loss: 0.1825 - val_accuracy: 0.9762 - val_precision_2: 0.9807 - val_recall_2: 0.9720\n",
-      "Epoch 18/20\n",
-      "2874/2874 [==============================] - 39s 14ms/step - loss: 0.2002 - accuracy: 0.9667 - precision_2: 0.9714 - recall_2: 0.9632 - val_loss: 0.2098 - val_accuracy: 0.9692 - val_precision_2: 0.9730 - val_recall_2: 0.9668\n",
-      "Epoch 19/20\n",
-      "2874/2874 [==============================] - 38s 13ms/step - loss: 0.1979 - accuracy: 0.9663 - precision_2: 0.9708 - recall_2: 0.9625 - val_loss: 0.2307 - val_accuracy: 0.9595 - val_precision_2: 0.9636 - val_recall_2: 0.9563\n",
-      "Epoch 20/20\n",
-      "2874/2874 [==============================] - 39s 13ms/step - loss: 0.1965 - accuracy: 0.9669 - precision_2: 0.9714 - recall_2: 0.9633 - val_loss: 0.1656 - val_accuracy: 0.9758 - val_precision_2: 0.9788 - val_recall_2: 0.9732\n",
-      "1437/1437 [==============================] - 8s 6ms/step - loss: 0.1656 - accuracy: 0.9758 - precision_2: 0.9788 - recall_2: 0.9732\n",
-      "Model_1\n"
+      "1889/2874 [==================>...........] - ETA: 36s - loss: 0.4497 - accuracy: 0.8801 - precision_3: 0.9166 - recall_3: 0.8428"
      ]
     }
    ],
