--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -1156,7 +1156,9 @@
      "text": [
       "Model create_model_1\n",
       "Epoch 1/20\n",
-      "1889/2874 [==================>...........] - ETA: 36s - loss: 0.4497 - accuracy: 0.8801 - precision_3: 0.9166 - recall_3: 0.8428"
+      "2874/2874 [==============================] - 122s 42ms/step - loss: 0.3865 - accuracy: 0.8992 - precision_3: 0.9262 - recall_3: 0.8728 - val_loss: 0.2435 - val_accuracy: 0.9470 - val_precision_3: 0.9544 - val_recall_3: 0.9423\n",
+      "Epoch 2/20\n",
+      "1221/2874 [===========>..................] - ETA: 1:01 - loss: 0.2902 - accuracy: 0.9329 - precision_3: 0.9403 - recall_3: 0.9257"
      ]
     }
    ],
@@ -1205,6 +1207,14 @@
     "    model.save(f'saved_model/sensor_model/{model_creator.__name__}.h5')\n",
     "\n",
     "print(best_model.name)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alle Modell Einlesen und predicten um bestes Modell anhand unseen Data "
    ]
   },
   {
@@ -1579,14 +1589,6 @@
     "import json\n",
     "\n",
     "best_model.save(\"saved_model/sensor_model.h5\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Modell Einlesen und predicten"
    ]
   }
  ],
