--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1518,32 +1518,42 @@
      "text": [
       "['saved_model/sensor_model\\\\create_model_1.h5', 'saved_model/sensor_model\\\\create_model_2.h5', 'saved_model/sensor_model\\\\create_model_3.h5', 'saved_model/sensor_model\\\\create_model_4.h5', 'saved_model/sensor_model\\\\create_model_5.h5', 'saved_model/sensor_model\\\\create_model_6.h5', 'saved_model/sensor_model\\\\create_model_7.h5']\n",
       "Model name: sensor_model\\create_model_1.h5\n",
-      "18/18 [==============================] - 1s 16ms/step\n",
+      "18/18 [==============================] - 1s 27ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "20/20 [==============================] - 0s 13ms/step\n",
+      "20/20 [==============================] - 0s 12ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 326\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 8\n",
       "Class 4 count: 302\n",
       "Class 5 count: 2\n",
-      "78/78 [==============================] - 1s 12ms/step\n",
+      "78/78 [==============================] - 1s 13ms/step\n",
+      "has classified: 4\n",
+      "was 1\n",
       "Class 0 count: 1034\n",
       "Class 1 count: 9\n",
       "Class 2 count: 3\n",
       "Class 3 count: 57\n",
       "Class 4 count: 1363\n",
-      "2/2 [==============================] - 0s 25ms/step\n",
+      "2/2 [==============================] - 0s 10ms/step\n",
+      "has classified: 3\n",
+      "was 3\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 38\n",
-      "14/14 [==============================] - 0s 12ms/step\n",
+      "14/14 [==============================] - 0s 13ms/step\n",
+      "has classified: 4\n",
+      "was 4\n",
       "Class 0 count: 120\n",
       "Class 1 count: 19\n",
       "Class 2 count: 1\n",
@@ -1552,31 +1562,41 @@
       "Class 5 count: 15\n",
       "Model name: sensor_model\\create_model_2.h5\n",
       "18/18 [==============================] - 1s 21ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "20/20 [==============================] - 0s 20ms/step\n",
+      "20/20 [==============================] - 0s 21ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 489\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 1\n",
       "Class 4 count: 143\n",
       "Class 5 count: 5\n",
-      "78/78 [==============================] - 2s 19ms/step\n",
+      "78/78 [==============================] - 2s 21ms/step\n",
+      "has classified: 0\n",
+      "was 1\n",
       "Class 0 count: 1568\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 48\n",
       "Class 4 count: 850\n",
-      "2/2 [==============================] - 0s 23ms/step\n",
+      "2/2 [==============================] - 0s 18ms/step\n",
+      "has classified: 3\n",
+      "was 3\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 38\n",
-      "14/14 [==============================] - 0s 19ms/step\n",
+      "14/14 [==============================] - 0s 20ms/step\n",
+      "has classified: 0\n",
+      "was 4\n",
       "Class 0 count: 284\n",
       "Class 1 count: 33\n",
       "Class 2 count: 0\n",
@@ -1584,32 +1604,42 @@
       "Class 4 count: 5\n",
       "Class 5 count: 35\n",
       "Model name: sensor_model\\create_model_3.h5\n",
-      "18/18 [==============================] - 0s 10ms/step\n",
+      "18/18 [==============================] - 0s 11ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "20/20 [==============================] - 0s 10ms/step\n",
+      "20/20 [==============================] - 0s 14ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 459\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 17\n",
       "Class 4 count: 160\n",
       "Class 5 count: 2\n",
-      "78/78 [==============================] - 1s 10ms/step\n",
+      "78/78 [==============================] - 1s 11ms/step\n",
+      "has classified: 0\n",
+      "was 1\n",
       "Class 0 count: 2387\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 50\n",
       "Class 4 count: 29\n",
-      "2/2 [==============================] - 0s 15ms/step\n",
+      "2/2 [==============================] - 0s 11ms/step\n",
+      "has classified: 3\n",
+      "was 3\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 38\n",
-      "14/14 [==============================] - 0s 9ms/step\n",
+      "14/14 [==============================] - 0s 12ms/step\n",
+      "has classified: 0\n",
+      "was 4\n",
       "Class 0 count: 223\n",
       "Class 1 count: 18\n",
       "Class 2 count: 0\n",
@@ -1617,27 +1647,35 @@
       "Class 4 count: 64\n",
       "Class 5 count: 19\n",
       "Model name: sensor_model\\create_model_4.h5\n",
-      "18/18 [==============================] - 0s 9ms/step\n",
+      "18/18 [==============================] - 0s 13ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "20/20 [==============================] - 0s 10ms/step\n",
+      "20/20 [==============================] - 0s 12ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 519\n",
       "Class 1 count: 0\n",
       "Class 2 count: 2\n",
       "Class 3 count: 26\n",
       "Class 4 count: 61\n",
       "Class 5 count: 30\n",
-      "78/78 [==============================] - 1s 10ms/step\n",
+      "78/78 [==============================] - 1s 12ms/step\n",
+      "has classified: 0\n",
+      "was 1\n",
       "Class 0 count: 1894\n",
       "Class 1 count: 190\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 382\n",
-      "2/2 [==============================] - 0s 15ms/step\n",
+      "2/2 [==============================] - 0s 14ms/step\n",
+      "has classified: 3\n",
+      "was 3\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
@@ -1645,6 +1683,8 @@
       "Class 4 count: 0\n",
       "Class 5 count: 3\n",
       "14/14 [==============================] - 0s 10ms/step\n",
+      "has classified: 0\n",
+      "was 4\n",
       "Class 0 count: 279\n",
       "Class 1 count: 64\n",
       "Class 2 count: 0\n",
@@ -1652,31 +1692,41 @@
       "Class 4 count: 6\n",
       "Class 5 count: 55\n",
       "Model name: sensor_model\\create_model_5.h5\n",
-      "18/18 [==============================] - 0s 4ms/step\n",
+      "18/18 [==============================] - 0s 2ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 2\n",
       "Class 4 count: 0\n",
       "Class 5 count: 545\n",
-      "20/20 [==============================] - 0s 5ms/step\n",
+      "20/20 [==============================] - 0s 2ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 619\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 19\n",
       "78/78 [==============================] - 0s 3ms/step\n",
+      "has classified: 1\n",
+      "was 1\n",
       "Class 0 count: 166\n",
       "Class 1 count: 2223\n",
       "Class 2 count: 0\n",
       "Class 3 count: 48\n",
       "Class 4 count: 29\n",
-      "2/2 [==============================] - 0s 27ms/step\n",
+      "2/2 [==============================] - 0s 3ms/step\n",
+      "has classified: 1\n",
+      "was 3\n",
       "Class 0 count: 2\n",
       "Class 1 count: 32\n",
       "Class 2 count: 2\n",
       "Class 3 count: 2\n",
-      "14/14 [==============================] - 0s 4ms/step\n",
+      "14/14 [==============================] - 0s 3ms/step\n",
+      "has classified: 0\n",
+      "was 4\n",
       "Class 0 count: 267\n",
       "Class 1 count: 1\n",
       "Class 2 count: 0\n",
@@ -1684,31 +1734,41 @@
       "Class 4 count: 78\n",
       "Class 5 count: 16\n",
       "Model name: sensor_model\\create_model_6.h5\n",
-      "18/18 [==============================] - 0s 5ms/step\n",
+      "18/18 [==============================] - 0s 2ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "20/20 [==============================] - 0s 9ms/step\n",
+      "20/20 [==============================] - 0s 2ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 428\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 191\n",
       "Class 5 count: 19\n",
-      "78/78 [==============================] - 0s 3ms/step\n",
+      "78/78 [==============================] - 0s 2ms/step\n",
+      "has classified: 1\n",
+      "was 1\n",
       "Class 0 count: 0\n",
       "Class 1 count: 2168\n",
       "Class 2 count: 210\n",
       "Class 3 count: 1\n",
       "Class 4 count: 87\n",
-      "2/2 [==============================] - 0s 30ms/step\n",
+      "2/2 [==============================] - 0s 3ms/step\n",
+      "has classified: 2\n",
+      "was 3\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 38\n",
-      "14/14 [==============================] - 0s 6ms/step\n",
+      "14/14 [==============================] - 0s 2ms/step\n",
+      "has classified: 0\n",
+      "was 4\n",
       "Class 0 count: 283\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
@@ -1716,14 +1776,18 @@
       "Class 4 count: 50\n",
       "Class 5 count: 55\n",
       "Model name: sensor_model\\create_model_7.h5\n",
-      "18/18 [==============================] - 0s 11ms/step\n",
+      "18/18 [==============================] - 0s 4ms/step\n",
+      "has classified: 5\n",
+      "was 5\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "20/20 [==============================] - 0s 11ms/step\n",
+      "20/20 [==============================] - 0s 5ms/step\n",
+      "has classified: 0\n",
+      "was 0\n",
       "Class 0 count: 607\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
@@ -1731,16 +1795,22 @@
       "Class 4 count: 0\n",
       "Class 5 count: 28\n",
       "78/78 [==============================] - 0s 4ms/step\n",
+      "has classified: 0\n",
+      "was 1\n",
       "Class 0 count: 1892\n",
       "Class 1 count: 59\n",
       "Class 2 count: 0\n",
       "Class 3 count: 3\n",
       "Class 4 count: 512\n",
-      "2/2 [==============================] - 0s 112ms/step\n",
+      "2/2 [==============================] - 0s 9ms/step\n",
+      "has classified: 2\n",
+      "was 3\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 38\n",
-      "14/14 [==============================] - 0s 9ms/step\n",
+      "14/14 [==============================] - 0s 3ms/step\n",
+      "has classified: 0\n",
+      "was 4\n",
       "Class 0 count: 338\n",
       "Class 1 count: 0\n",
       "Class 2 count: 1\n",
@@ -1808,6 +1878,10 @@
     "        # Print the predicted class labels\n",
     "        # get the median of the predicted labels\n",
     "        sol = np.median(y_pred_labels)\n",
+    "        # caluclate the most frequent class not the median\n",
+    "        sol = np.bincount(y_pred_labels).argmax()\n",
+    "        print(f'has classified: {sol}')\n",
+    "        print(f'was {expected}')\n",
     "\n",
     "        class_counts = np.bincount(y_pred_labels)\n",
     "        for i, count in enumerate(class_counts):\n",
@@ -1823,6 +1897,8 @@
     "\n",
     "best_model = None\n",
     "lowest_difference = float('inf')\n",
+    "most_correct = 0\n",
+    "\n",
     "\n",
     "for h5_file in h5_files:\n",
     "    model_name = h5_file.split(\"/\")[-1]\n",
@@ -1832,26 +1908,26 @@
     "    model = validate_unseen_data(h5_file)\n",
     "    \n",
     "    # Calculate the differences\n",
-    "    median1 = model.predict_classes('06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren')[0]\n",
-    "    median2 = model.predict_classes('01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen')[0]\n",
-    "    median4 = model.predict_classes('01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen')[0]\n",
-    "    median5 = model.predict_classes(\"03_Huawei_Stehen-2023-03-16_15-27-54Lea_BuetlerStehen\")[0]\n",
-    "    median6 = model.predict_classes(\"01_iPhone14Pro_2023-02-28_20-09-53Yvo_KellerTreppenlaufen\")[0]\n",
+    "    median1 = model.predict_classes('06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren', 5)[0]\n",
+    "    median2 = model.predict_classes('01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen', 0)[0]\n",
+    "    median4 = model.predict_classes('01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen', 1)[0]\n",
+    "    median5 = model.predict_classes(\"03_Huawei_Stehen-2023-03-16_15-27-54Lea_BuetlerStehen\", 3)[0]\n",
+    "    median6 = model.predict_classes(\"01_iPhone14Pro_2023-02-28_20-09-53Yvo_KellerTreppenlaufen\", 4)[0]\n",
     "\n",
-    "    differences = [\n",
-    "        abs(median1 - 5.0),\n",
-    "        abs(median2 - 0.0),\n",
-    "        abs(median4 - 1.0),\n",
-    "        abs(median5 - 3.0),\n",
-    "        abs(median6 - 4.0)\n",
+    "    correctness = [\n",
+    "        int(median1 == 5.0),\n",
+    "        int(median2 == 0.0),\n",
+    "        int(median4 == 1.0),\n",
+    "        int(median5 == 3.0),\n",
+    "        int(median6 == 4.0)\n",
     "    ]\n",
-    "    \n",
-    "    # Calculate the average difference\n",
-    "    average_difference = sum(differences) / len(differences)\n",
-    "    \n",
-    "    # Check if the current model has the lowest average difference\n",
-    "    if average_difference < lowest_difference:\n",
-    "        lowest_difference = average_difference\n",
+    "\n",
+    "    total_correct = sum(correctness)\n",
+    "    print(f\"Total correct: {total_correct}\")\n",
+    "\n",
+    "# Check if the current model has the most correct predictions\n",
+    "    if total_correct > most_correct:\n",
+    "        most_correct = total_correct\n",
     "        best_model = model_name\n",
     "\n",
     "print(\"Best model:\", best_model)\n",
