--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -563,6 +563,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion `add_noise` fügt dem gegebenen Zeitreihen-Datensatz Rauschen hinzu. Sie generiert eine zufällige Rauschverteilung mit der gleichen Länge wie die Zeitreihe und multipliziert sie mit dem Rauschfaktor. Das resultierende Rauschen wird dann zur Zeitreihe addiert, um den rauschigen Datensatz zu erhalten.\n",
+    "\n",
+    "Die Funktion `flip_time_series` kehrt die Reihenfolge der Werte in der Zeitreihe um. Dies kann nützlich sein, um bestimmte Muster oder Trends in den Daten zu erkennen.\n",
+    "\n",
+    "Die Funktion `scale_magnitude` skaliert die Amplitude der Zeitreihe um den gegebenen Skalierungsfaktor. Dies ändert die Höhe der Werte in der Zeitreihe, ohne die Form oder das Muster der Daten zu beeinflussen.\n",
+    "\n",
+    "Die Funktion `augment_data` verwendet die oben genannten Funktionen, um die gegebenen Eingangsdaten (X) und die zugehörigen Labels (y) zu erweitern. Sie erstellt leere Listen für die erweiterten Daten und Labels. Für jeden Datensatz in X werden folgende Schritte durchgeführt:\n",
+    "\n",
+    "1. Rauschen hinzufügen: Die Funktion `add_noise` wird auf den Datensatz angewendet, wobei der Rauschfaktor übergeben wird. Der rauschige Datensatz und das entsprechende Label werden den erweiterten Listen hinzugefügt.\n",
+    "\n",
+    "2. Amplitude skalieren: Die Funktion `scale_magnitude` wird auf den Datensatz angewendet, wobei der Skalierungsfaktor übergeben wird. Der skalierte Datensatz und das entsprechende Label werden den erweiterten Listen hinzugefügt.\n",
+    "\n",
+    "3. Zeitreihe umkehren: Falls eine zufällig generierte Zahl kleiner als die angegebene Flipp-Wahrscheinlichkeit ist, wird die Funktion `flip_time_series` auf den Datensatz angewendet. Der umgekehrte Datensatz und das entsprechende Label werden den erweiterten Listen hinzugefügt.\n",
+    "\n",
+    "Am Ende werden die erweiterten Listen in Numpy-Arrays umgewandelt und als Ergebnis zurückgegeben.\n",
+    "\n",
+    "Zusammenfassend führt die Funktion `augment_data` eine Datenaugmentation für Zeitreihen durch, indem sie Rauschen hinzufügt, die Amplitude skaliert und/oder die Zeitreihen umkehrt. Dies kann helfen, die Datenvielfalt zu erhöhen und das Modelltraining robuster zu machen.\n",
+    "\n",
+    "Die Zeit zum trainieren des Modells wird durch die augementierung der Daten mindestens verdreifacht, darum nur mit bedacht augumentieren"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -609,6 +635,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Benutzerdefinierte Daten-Generator-Klasse namens `DataGenerator`, die das `Sequence`-Modul aus `tf.keras.utils` verwendet. Diese Klasse ermöglicht es, Daten in Batches zu laden und sie für das Training von Modellen in TensorFlow effizient zu verwenden.\n",
+    "\n",
+    "Die Klasse `DataGenerator` hat die folgenden wichtigen Methoden:\n",
+    "\n",
+    "1. `__init__(self, x_data, y_data, batch_size)`: Der Initialisierungsmethode werden die Eingangsdaten `x_data`, die zugehörigen Labels `y_data` und die gewünschte Batch-Größe `batch_size` übergeben. Diese Daten werden in den Attributen der Klasse gespeichert.\n",
+    "\n",
+    "2. `__len__(self)`: Diese Methode gibt die Anzahl der Batches zurück, die der Generator erzeugen kann. Sie berechnet die Länge basierend auf der Gesamtanzahl der Eingangsdaten und der gewählten Batch-Größe. Der Rückgabewert wird durch Aufrunden mit `np.ceil` auf die nächste Ganzzahl aufgerundet.\n",
+    "\n",
+    "3. `__getitem__(self, idx)`: Diese Methode wird aufgerufen, um einen bestimmten Batch an Eingangsdaten und Labels zurückzugeben, der durch den Index `idx` identifiziert wird. Sie extrahiert den entsprechenden Teil der Eingangsdaten und Labels basierend auf dem Index und der Batch-Größe. Der zurückgegebene Batch besteht aus `batch_x` (Eingangsdaten) und `batch_y` (Labels).\n",
+    "\n",
+    "Der Grund, warum dieser Daten-Generator für die GPU nützlich ist, liegt darin, dass er ermöglicht, die Daten in Batches zu laden und sie parallel auf der GPU zu verarbeiten. GPUs sind effizienter bei der Verarbeitung von großen Mengen von Daten, insbesondere wenn sie in Batches parallel verarbeitet werden können. Durch die Verwendung eines Daten-Generators wie `DataGenerator` können die Daten während des Trainings in Batches geladen werden, wodurch die Nutzung der GPU-Ressourcen optimiert und die Trainingsgeschwindigkeit verbessert wird. Dies ist besonders wichtig, wenn der verfügbare Arbeitsspeicher begrenzt ist und nicht alle Daten auf einmal in den Speicher passen. Der Daten-Generator lädt jeweils nur den benötigten Batch in den Speicher, während der vorherige Batch auf der GPU verarbeitet wird. Dadurch kann eine kontinuierliche Verarbeitung der Daten auf der GPU erreicht werden, was die Trainingseffizienz erhöht."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -630,6 +674,46 @@
     "        batch_x = self.x_data[idx * self.batch_size : (idx + 1) * self.batch_size]\n",
     "        batch_y = self.y_data[idx * self.batch_size : (idx + 1) * self.batch_size]\n",
     "        return batch_x, batch_y"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Festlegen der Fenstergröße und Schrittgröße:\n",
+    "   - `window_size`: Die Größe der Fenster, die in den Daten verwendet werden sollen. Dies gibt an, wie viele aufeinanderfolgende Zeitpunkte in einem Fenster enthalten sein sollen.\n",
+    "   - `step_size`: Der Schritt, um das Fenster bei jedem Schritt zu verschieben. Es gibt an, wie viele Zeitpunkte das Fenster bei jedem Schritt vorrückt.\n",
+    "\n",
+    "2. Auswahl von Merkmalen und Labels:\n",
+    "   - `X`: Eine Matrix der Merkmale, die aus dem Datenframe extrahiert werden. Hier werden die Spalten 1 bis 12 des Datenframes verwendet.\n",
+    "   - `y`: Ein eindimensionaler Vektor mit den zugehörigen Labels, die aus der Spalte \"class\" des Datenframes stammen.\n",
+    "\n",
+    "3. Erzeugung leerer Listen für Fenster und Labels:\n",
+    "   - `X_windows`: Eine leere Liste, die die Fensterdaten aufnehmen wird.\n",
+    "   - `y_windows`: Eine leere Liste, die die zugehörigen Labels für die Fensterdaten aufnehmen wird.\n",
+    "\n",
+    "4. Datenaugmentation (falls erforderlich):\n",
+    "   - Überprüfung der Variable `Parameters.data_augmentation`, um festzustellen, ob eine Datenaugmentation durchgeführt werden soll.\n",
+    "   - Falls ja, werden Rausch-, Skalierungs- und Umkehrfaktoren festgelegt.\n",
+    "   - Die Funktion `augment_data` wird auf die Daten `X` und die Labels `y` angewendet, um die Daten zu erweitern.\n",
+    "   - Die erweiterten Daten und Labels werden den Variablen `X_augmented` und `y_augmented` zugewiesen.\n",
+    "\n",
+    "5. Erzeugung von Datenfenstern:\n",
+    "   - Schleife, um für jedes Fenster Daten und Labels zu erstellen.\n",
+    "   - Wenn Datenaugmentation durchgeführt wurde:\n",
+    "     - Das Fenster wird aus den erweiterten Daten `X_augmented` und `y_augmented` extrahiert.\n",
+    "     - Überprüfung, ob es innerhalb des Fensters einen Aktivitätsübergang gibt.\n",
+    "     - Wenn kein Aktivitätsübergang vorliegt, werden das Fenster (`window_data`) und das zugehörige Label (`window_labels[0]`) zu den Listen `X_windows` und `y_windows` hinzugefügt.\n",
+    "   - Wenn keine Datenaugmentation durchgeführt wurde:\n",
+    "     - Das Fenster wird aus den ursprünglichen Daten `X` und `y` extrahiert.\n",
+    "     - Überprüfung, ob es innerhalb des Fensters einen Aktivitätsübergang gibt.\n",
+    "     - Wenn kein Aktivitätsübergang vorliegt, werden das Fenster (`window_data`) und das zugehörige Label (`window_labels[0]`) zu den Listen `X_windows` und `y_windows` hinzugefügt.\n",
+    "\n",
+    "6. Aktualisierung der Datenformate:\n",
+    "   - Die Listen `X_windows` und `y_windows` werden in Numpy-Arrays umgewandelt.\n",
+    "   - Die Dimensionen der Daten werden entsprechend den Anforderungen des Modells angepasst.\n",
+    "   - Die Anzahl der Zeitpunkte pro Fenster (`"
    ]
   },
   {
@@ -1505,6 +1589,16 @@
    "metadata": {},
    "source": [
     "# Alle Modell Einlesen und predicten um bestes Modell anhand unseen Data "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Hier werden alle Modelle die Trainiert wurden anhand von komplett neuen Daten bewerted und evaluiert.\n",
+    "- Dies ist wichtig, da wir ein generelles Modell erzeugen möchten und keines das Overfitted auf nur den gegebenen Daten\n",
+    "- Dazu lädt der Code hier alle Modelle aus dem Folder: saved_model/sensor_model/*"
    ]
   },
   {
