added again Tensorboard
added again Tensorboard

--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -1192,6 +1192,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot every Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
