--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -2723,6 +2723,20 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now run: tensorboard --logdir logs\n",
+    "and navigate to http://localhost:6006/\n",
+    "\n",
+    "Model1 = Baseline\n",
+    "Modelx = create_model + 1\n",
+    "\n",
+    "![Alt text](image.png)"
+   ]
   }
  ],
  "metadata": {
